--- a/pom.xml
+++ b/pom.xml
@@ -159,9 +159,19 @@
 		</dependency>
 		<!-- 映入JSON -->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.4.6</version>
 		</dependency>
 
 		<!-- 上传组件包 -->
@@ -195,12 +205,5 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.glassfish.jersey.ext</groupId> <artifactId>jersey-spring3</artifactId> 
-			<version>2.9.1</version> <exclusions> <exclusion> <groupId>org.springframework</groupId> 
-			<artifactId>spring-core</artifactId> </exclusion> <exclusion> <groupId>org.springframework</groupId> 
-			<artifactId>spring-web</artifactId> </exclusion> <exclusion> <groupId>org.springframework</groupId> 
-			<artifactId>spring-beans</artifactId> </exclusion> </exclusions> </dependency> 
-			<dependency> <groupId>org.glassfish.jersey.media</groupId> <artifactId>jersey-media-json-jackson</artifactId> 
-			<version>2.9.1</version> </dependency> -->
 	</dependencies>
 </project>
