--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/yhasm
-username=yh
-password=yh
+url=jdbc:mysql://localhost:3306/samyh
+username=samyh
+password=samyh
 #\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570
 initialSize=0
 #\u5b9a\u4e49\u6700\u5927\u8fde\u63a5\u6570
