--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,14 @@
 			<version>1.10</version>
 		</dependency>
 		<dependency>
+			<groupId>com.ctc.smscloud</groupId>
+			<artifactId>webservice</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+			<!--本地jar的路径,相对或者绝对都可以 -->
+			<systemPath>F:/github/asm/WebContent/WEB-INF/lib/ctc-smscloud-xmlwebservice.jar</systemPath>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
 			<version>8.1.8.v20121106</version>
