--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,5 +1,5 @@
 dahant.serverurl=http://3tong.net/services/sms
 dahant.account=dh56581
 dahant.password=B!1l?!c4
-dahant.sign=\u3010\u4e9a\u4ea8\u4e91\u7535\u6c60\u3011
 sms.enable=false
+admin.phone=15618672987,13621812239,13916174089
