--- a/pom.xml
+++ b/pom.xml
@@ -286,5 +286,10 @@
 			<artifactId>pagehelper</artifactId>
 			<version>3.7.5</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.5.1</version>
+		</dependency>
 	</dependencies>
 </project>
