app version check

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -2,4 +2,8 @@ dahant.serverurl=http://3tong.net/services/sms
 dahant.account=dh56581
 dahant.password=B!1l?!c4
 sms.enable=false
+#admin user phone
 admin.phone=15618672987,13621812239,13916174089
+#app version and downloadUrl
+android.latest.version=0.0.2
+android.latest.downloadurl=http://samyh.oss-cn-shenzhen.aliyuncs.com/YahengBattery.apk
