--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -7,3 +7,4 @@ admin.phone=15618672987,13621812239,13916174089
 #app version and downloadUrl
 android.latest.version=0.0.2
 android.latest.downloadurl=http://samyh.oss-cn-shenzhen.aliyuncs.com/YahengBattery.apk
+android.latest.shortUrl=http://t.cn/RLbOsxo
