get user replay sms and forward to service mail

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -8,3 +8,9 @@ admin.phone=15618672987,13621812239,13916174089
 android.latest.version=0.0.2
 android.latest.downloadurl=http://samyh.oss-cn-shenzhen.aliyuncs.com/YahengBattery.apk
 android.latest.shortUrl=http://t.cn/RLbOsxo
+# send user replay sms to yh
+mail.host=smtp.126.com
+mail.sender=boole_guo@126.com
+mail.username=boole_guo
+mail.password=15929902116guo
+mail.receiver=nate.guo@sam-world.com
