bty lock function

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -14,3 +14,5 @@ mail.sender=boole_guo@126.com
 mail.username=boole_guo
 mail.password=15929902116guo
 mail.receiver=nate.guo@sam-world.com
+# max move distance after locked
+move.distance=100
