--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -16,3 +16,8 @@ mail.password=15929902116guo
 mail.receiver=nate.guo@sam-world.com
 # max move distance after locked
 move.distance=100
+#unicom m2m
+m2m.url=https://api.10646.cn/ws/service/terminal
+m2m.username=wilbur
+m2m.password=HONglass22cn
+m2m.apikey=7b5c333e-6385-4469-9419-88feefd3dd53
