add unicom dependience jar

--- a/pom.xml
+++ b/pom.xml
@@ -296,5 +296,12 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.wss</groupId>
+			<artifactId>xws-security</artifactId>
+			<version>3.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/WebContent/WEB-INF/lib/xws-security-3.0.jar</systemPath>
+		</dependency>
 	</dependencies>
 </project>
