--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -5,9 +5,9 @@ sms.enable=false
 #admin user phone
 admin.phone=15618672987,13621812239,13916174089
 #app version and downloadUrl
-android.latest.version=0.0.2
-android.latest.downloadurl=http://samyh.oss-cn-shenzhen.aliyuncs.com/YahengBattery.apk
-android.latest.shortUrl=http://t.cn/RLbOsxo
+android.latest.version=1.0.1
+android.latest.downloadurl=http://samyh.oss-cn-shenzhen.aliyuncs.com/YahengBattery_20150816_yun.apk
+android.latest.shortUrl=http://t.cn/RLdGy9V
 # send user replay sms to yh
 mail.host=smtp.126.com
 mail.sender=boole_guo@126.com
