--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>sam.yh</groupId>
 	<artifactId>sam</artifactId>
-	<version>0.3.5-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<build>
 		<pluginManagement>
 			<plugins>
+			<!-- install时跳过测试 -->
+			<plugin>   
+              <groupId>org.apache.maven.plugins</groupId>   
+                <artifactId>maven-surefire-plugin</artifactId>   
+                <version>2.4.2</version>   
+                 <configuration>   
+                <skipTests>true</skipTests>   
+                </configuration>   
+               </plugin>   
+			
+			
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
