--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>sam.yh</groupId>
 	<artifactId>sam</artifactId>
+	<version>0.3.8-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<build>
 		<pluginManagement>
